profile: Update avatar image to ChatGPT generated clippy

--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ theme = "weaver"
     name = "Brandon High"
     nickname = "highb"
     pronouns = "he/him"
-    avatar = "/images/avatar.jpg"
+    avatar = "/images/avatar-128px.png"
     location = "Portland, OR"
     bio = "Indie web weaver."
     url = "https://blog.bmh.io/"
